# htl

./: railway.json.txt
hotel-price-monitor/: .env.example  .gitignore  Dockerfile  Procfile.txt  README.md  docker-compose.yml  pyproject.toml
hotel-price-monitor/src/: config.py  main.py  scheduler.py
hotel-price-monitor/src/bot/: bot.py  handlers.py
hotel-price-monitor/src/core/: models.py  notifications.py  pricing.py
hotel-price-monitor/src/db/: engine.py  models.py  repository.py
hotel-price-monitor/src/providers/: base.py  mock_provider.py  tinkoff_stub.py
hotel-price-monitor/tests/: test_notifications.py  test_pricing.py
